DIT-1853 fixed remove link overflow issue on mobile device (#160)

--- a/app/assets/stylesheets/partials/_upload_help.scss
+++ b/app/assets/stylesheets/partials/_upload_help.scss
@@ -134,3 +134,13 @@ details summary {
   direction: ltr;
   cursor: pointer;
 }
+/* fixed Remove link overflow issue on mobile device */
+@media screen and (max-width: 767px) {
+    .file-list-size {
+        width: 20%;
+        padding-right: 2px;
+    }
+    .file-list-link {
+        width: 20%;
+    }
+}
